--- a/source/_posts/阿里云9折优惠码.md
+++ b/source/_posts/阿里云9折优惠码.md
@@ -3,6 +3,11 @@ permalink: a-li-yun-tui-jian-ma
 id: 8
 updated: '2015-08-18 13:54:36'
 date: 2015-08-18 13:52:19
+tags:
+- 阿里云
+- 优惠
+- VPS
+categories: VPS
 ---
 
 ## 推荐码**3HQIRU**
